--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "jest --watch-all",
+    "test": "jest",
+    "test:watch": "jest --watch-all",
     "prepare": "husky"
   },
   "keywords": [],
