--- a/package.json
+++ b/package.json
@@ -4,8 +4,13 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "dev": "node --env-file=.env -r ts-node/register ./src/main/server.ts",
     "test": "jest",
     "test:watch": "jest --watch-all",
+    "migration:create": "knex migrate:make $npm_config_name -x ts",
+    "migration:run": "knex migrate:latest",
+    "migration:list": "knex migrate:list",
+    "migration:rollback": "knex migrate:rollback --all",
     "prepare": "husky"
   },
   "keywords": [],
@@ -16,10 +21,14 @@
     "@types/jest": "^29.5.12",
     "husky": "^9.0.11",
     "ts-jest": "^29.1.4",
+    "ts-node": "^10.9.2",
     "typescript": "^5.4.5"
   },
   "dependencies": {
+    "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "express-async-errors": "^3.1.1",
+    "knex": "^3.1.0",
     "mysql2": "^3.10.0"
   }
 }
