--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
   "scripts": {
     "dev": "node --env-file=.env -r ts-node/register ./src/main/server.ts",
     "test": "jest",
+    "lint": "eslint . --ext .ts",
+    "lint:fix": "eslint . --ext .ts --fix",
     "test:watch": "jest --watch-all",
+    "build": "tsc -p tsconfig.json",
     "migration:create": "knex migrate:make $npm_config_name -x ts",
     "migration:run": "knex migrate:latest",
     "migration:list": "knex migrate:list",
@@ -19,6 +22,9 @@
   "devDependencies": {
     "@types/express": "^4.17.21",
     "@types/jest": "^29.5.12",
+    "@typescript-eslint/eslint-plugin": "^7.11.0",
+    "@typescript-eslint/parser": "^7.11.0",
+    "eslint": "^8.57.0",
     "husky": "^9.0.11",
     "ts-jest": "^29.1.4",
     "ts-node": "^10.9.2",
